Template: Add TemplateMain to isolate possible css vars and the main content from "outer components" such as Footer/NextProject, add TemplateSection to combine common template styling requirements, isolate Oras related styles, fix possible overflow issue w/ scrollbar

--- a/components/Template/_Template--about.scss
+++ b/components/Template/_Template--about.scss
@@ -1,3 +1,3 @@
 .Template--about {
-  background-color: wheat;
+  --Template-bg-color: wheat;
 }
