--- a/components/Template/_Template--oras.scss
+++ b/components/Template/_Template--oras.scss
@@ -1,9 +1,20 @@
 .Template--oras {
-  --Template-bgColor: var(--oras-bg);
+  --Template-bg-color: var(--oras-bg);
 
-  .Info {
-    @include mq($until: ml) {
-      margin-top: rem($space * -4);
+  .Template-figure-1.Figure {
+    margin: rem($space-m) 0 rem($space-xxl) 0;
+
+    @include mq(l) {
+      margin-top: rem($space * -6);
+    }
+  }
+
+  .Template-figure-2.Figure {
+    margin-bottom: rem($space);
+
+    @include mq(m) {
+      margin-bottom: 0;
+      margin-top: rem($space * 12);
     }
   }
 }
